@@ -1,3 +1,15 @@
+2009-09-28  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c:	Replaced TclProcessReturn() calls with
+	* tests/error.test:	Tcl_SetReturnOptions() calls as a simple fix
+	for [Bug 2855247].  Thanks to Anton Kovalenko for the report and fix.
+	Additional fixes for other failures demonstrated by new tests.
+
+2009-09-27  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/error.test (error-15.8.*):	Coverage tests illustrating
+	flaws in the propagation of return options by [try].
+
 2009-09-26  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tclooConfig.sh, win/tclooConfig.sh: [Bug 2026844]: Added dummy
